added hp theory

--- a/tex/tesis.bib
+++ b/tex/tesis.bib
@@ -222,6 +222,134 @@
 	url = {https://support.numxl.com/hc/es/articles/215959443-MAPE-Error-medio-de-porcentaje-absoluto}
 }
 
+@inproceedings{smbo,
+author = {Bergstra, James and Bardenet, R. and Kégl, Balázs and Bengio, Y.},
+year = {2011},
+month = {12},
+pages = {},
+title = {Algorithms for Hyper-Parameter Optimization}
+}
+
+@misc{keras-tuner,
+	title = {{Keras Tuner}},
+	year = {2019},
+	month = {Nov},
+	note = {[Online; accessed 5. Apr. 2021]},
+	url = {https://keras-team.github.io/keras-tuner}
+}
+
+@book{Bissuel2019Apr,
+	author = {Bissuel, Alo{\ifmmode\ddot{\imath}\else\"{\i}\fi}s},
+	title = {{Hyper-parameter optimization algorithms: a short review}},
+	journal = {Medium},
+	year = {2019},
+	month = {Apr},
+	isbn = {978-244752590},
+	publisher = {Criteo R{\&}D Blog},
+	url = {https://medium.com/criteo-engineering/hyper-parameter-optimization-algorithms-2fe447525903}
+}
+
+@misc{automl-bohb,
+	title = {{BOHB: Robust and Efficient Hyperparameter Optimization at Scale}},
+	year = {2021},
+	month = {Apr},
+	note = {[Online; accessed 5. Apr. 2021]},
+	url = {https://www.automl.org/blog_bohb}
+}
+
+@article{Rosenberg2020Aug,
+	author = {Rosenberg, Noam {\relax (xn--45q}. xn--9kq. )},
+	title = {{Hyper Parameter Tuning {\ifmmode---\else\textemdash\fi} A Tutorial - Towards Data Science}},
+	journal = {Medium},
+	year = {2020},
+	month = {Aug},
+	issn = {7065-5254},
+	publisher = {Towards Data Science},
+	url = {https://towardsdatascience.com/hyper-parameter-tuning-a-tutorial-70dc6c552c54}
+}
+
+@article{Abraham2021Feb,
+	author = {Abraham, Alexandre},
+	title = {{A (Slightly) Better Budget Allocation for Hyperband {$\vert$} data from the trenches}},
+	journal = {Medium},
+	year = {2021},
+	month = {Feb},
+	publisher = {data from the trenches},
+	url = {https://medium.com/data-from-the-trenches/a-slightly-better-budget-allocation-for-hyperband-bbd45af14481}
+}
+
+@misc{li2018hyperband,
+	title={Hyperband: A Novel Bandit-Based Approach to Hyperparameter Optimization}, 
+	author={Lisha Li and Kevin Jamieson and Giulia DeSalvo and Afshin Rostamizadeh and Ameet Talwalkar},
+	year={2018},
+	eprint={1603.06560},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
+}
+
+@article{Agnihotri2020May,
+	author = {Agnihotri, Apoorv and Batra, Nipun},
+	title = {{Exploring Bayesian Optimization}},
+	journal = {Distill},
+	volume = {5},
+	number = {5},
+	pages = {e26},
+	year = {2020},
+	month = {May},
+	issn = {2476-0757},
+	doi = {10.23915/distill.00026}
+}
+
+@misc{Agrawal2019Mar,
+	author = {Agrawal, Shubham},
+	title = {{Time Series Modeling}},
+	year = {2019},
+	month = {Mar},
+	note = {[Online; accessed 5. Apr. 2021]},
+	url = {https://rstudio-pubs-static.s3.amazonaws.com/478704_10185309918043d4a279e1e1545694e0.html}
+}
+
+@article{Wang2020Apr,
+	author = {Wang, Wei},
+	title = {{Bayesian Optimization Concept Explained in Layman Terms}},
+	journal = {Medium},
+	year = {2020},
+	month = {Apr},
+	publisher = {Towards Data Science},
+	url = {https://towardsdatascience.com/bayesian-optimization-concept-explained-in-layman-terms-1d2bcdeaf12f}
+}
+
+@misc{vientre_alquiler,
+	author = {{Colaboradores de los proyectos Wikimedia}},
+	title = {{Vientre de alquiler (pr{\ifmmode\acute{a}\else\'{a}\fi}ctica) - Wikipedia, la enciclopedia libre}},
+	year = {2021},
+	month = {Mar},
+	note = {[Online; accessed 4. Apr. 2021]},
+	url = {https://es.wikipedia.org/w/index.php?title=Vientre_de_alquiler_(pr%C3%A1ctica)&oldid=134152025}
+}
+
+@article{Ye2020Oct,
+	author = {Ye, Andre},
+	title = {{The Beauty of Bayesian Optimization, Explained in Simple Terms}},
+	journal = {Medium},
+	year = {2020},
+	month = {Oct},
+	publisher = {Towards Data Science},
+	url = {https://towardsdatascience.com/the-beauty-of-bayesian-optimization-explained-in-simple-terms-81f3ee13b10f}
+}
+
+@book{Koehrsen2018Jul,
+	author = {Koehrsen, Will},
+	title = {{A Conceptual Explanation of Bayesian Hyperparameter Optimization for Machine Learning}},
+	journal = {Medium},
+	year = {2018},
+	month = {Jul},
+	isbn = {978-817227805},
+	publisher = {Towards Data Science},
+	address = {India},
+	url = {https://towardsdatascience.com/a-conceptual-explanation-of-bayesian-model-based-hyperparameter-optimization-for-machine-learning-b8172278050f}
+}
+
 @misc{rnn_ed_azure,
 	author = {Azure},
 	title = {{DeepLearningForTimeSeriesForecasting}},
